--- a/pom.xml
+++ b/pom.xml
@@ -15,4 +15,10 @@
         <version>8.4.0</version>
         </dependency>
     </dependencies>
+         
+    <properties>
+         <maven.compiler.source>1.8</maven.compiler.source>
+         <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
+         
 </project>
