--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,12 @@
         <artifactId>ibm-watson</artifactId>
         <version>8.4.0</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
          
     <properties>
